# autotagger-wd-v1.4

./: .gitmodules  Dockerfile  README.md  docker-compose.yaml  gunicorn.conf.py  main.py  pyproject.toml  test.py
